--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <cite>— Albert Camus</cite>
                 </section>
 
-                <p class="reveal">Insert Something Here</p>
+                <p class="reveal">Reconstruction after Destruction</p>
             </article>
         </div>
 
@@ -57,4 +57,5 @@
 
     <script src="interactive.js"></script>
 </body>
+
 </html>
